--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@sailshq/lodash": "^3.10.3",
     "dotenv": "^16.0.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
