--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "@sailshq/lodash": "^3.10.3",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
