--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
+    "rfc5545-rrule": "^1.1.1",
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
